Implemented: Points 1-6 from Rebecca's feedback. Number 7 requires clarification
 1) Individual Students -
 We also want to be able to display a single student’s graphs per skill and his/her composite scores over time (# of classes).  Can we add that to the filter and functionality?

 2) “Number of Evaluations” -
 I think this can be retitled to be “Quantity of Data Collected By Month”.  It won’t necessarily be “MindLeaps”.  For example, HIAS will now continue to collect data in Uganda even though our team has left.  Can “Number of Assessments” on the y-axis become “Number of Data Points Collected”?

 3) “Histogram of Student Performance Values” -
 Not sure if this one is terribly valuable to us. Let’s leave it for now but I’m thinking of hiding it for the final version.

 4) “Performance Change Throughout The Program By Gender” -
 Not sure if this one is terribly valuable to us. Let’s leave it for now but I’m thinking of hiding it for the final version.

 5) “Average Performance Per Group Versus Time in Program”
 - We would want to plot each group on a separate graph.
 - The y-axis should go from 0 to 7 in increments of 1.

 6) “Performance Data For Each Student Vs. Time in Program”
 - We should label the x-axis differently.  Perhaps: “Above Average Performance” and “Below Average Performance” or “Above Predicted Performance Level” (or something similar…we can check with McSharry for the best descriptor)

 7) Skill Graphs
 - We want these to be line graphs or scatter plots according to Time in “# of Lessons”.  So, the y-axis should be 0-7 in increments of 1 and the x-axis should be “# of Lessons”.  These should be by Group and by Student (my #1 note here).  They are not valuable to us without the time component.

--- a/app/views/mindleaps_analytics/main/first.html.erb
+++ b/app/views/mindleaps_analytics/main/first.html.erb
@@ -2,6 +2,7 @@
   <script src="http://code.highcharts.com/highcharts.js"></script>
 </head>
 <h1>Analytics</h1>
+<%#= @lessons.to_a %>
 
 <%= form_tag do %>
     <table>
@@ -18,10 +19,10 @@
           <%= label_tag :group_label, "Group" %>
           <%= select_tag :group_select, options_from_collection_for_select(Group.all, :id, :group_name, @group), :prompt => 'All' %>
         </td>
-        <!--<td style="padding-right: 20px;">-->
-        <!--<%#= label_tag :student_select, "Student" %>-->
-        <!--<%#= select_tag :student_select, options_from_collection_for_select(Student.all, :id, :first_name, @selected_student) %>-->
-        <!--</td>-->
+        <td style="padding-right: 20px;">
+          <%= label_tag :student_label, "Student" %>
+          <%= select_tag :student_select, options_from_collection_for_select(Student.order(:last_name, :first_name).all, :id, :proper_name, @student), :prompt => 'All' %>
+        </td>
         <td style="padding-right: 20px;">
           <%= submit_tag "Submit" %>
         </td>
@@ -60,14 +61,18 @@
     $('#organization_select').change(function () {
 
         var selectedOrganization = $('#organization_select :selected').val();
-//        console.log(selectedOrganization)
+        var selectedChapter = $('#chapter_select :selected').val();
+        var selectedGroup = $('#group_select :selected').val();
+        console.debug(selectedOrganization);
 
         $.ajax({
             url: '<%=find_update_chapters_path%>',
             type: 'GET',
             dataType: 'json',
             data: {
-                organization_id: selectedOrganization
+                organization_id: selectedOrganization,
+                chapter_id: selectedChapter,
+                group_id: selectedGroup
             },
             success: function (data) {
                 var chapters = data.chapters;
@@ -97,15 +102,18 @@
     });
     $('#chapter_select').change(function () {
 
+        var selectedOrganization = $('#organization_select :selected').val();
         var selectedChapter = $('#chapter_select :selected').val();
-//        console.log(selectedChapter)
+        var selectedGroup = $('#group_select :selected').val();
 
         $.ajax({
             url: '<%=find_update_groups_path%>',
             type: 'GET',
             dataType: 'json',
             data: {
-                chapter_id: selectedChapter
+                organization_id: selectedOrganization,
+                chapter_id: selectedChapter,
+                group_id: selectedGroup
             },
             success: function (data) {
                 var groups = data.groups;
@@ -125,6 +133,8 @@
 
                     $('#group_select').append(opt, null);
                 }
+                $('#group_select').select(0);
+                $('#group_select').change();
             },
             error: function (data) {
                 debugger;
@@ -132,38 +142,45 @@
         });
     });
 
-    //    $('#group_select').change(function () {
-    //
-    //        var selectedGroup = $('#group_select :selected').val();
-    ////        console.log(selectedGroup)
-    //
-    //        $.ajax({
-    //            url: '<%#=find_update_students_path%>',
-    //            type: 'GET',
-    //            dataType: 'json',
-    //            data: {
-    //                group_id: selectedGroup
-    //            },
-    //            success: function (data) {
-    //                var students = data.students;
-    //                debugger;
-    //
-    //                $('#student_select').empty();
-    //                for (i = 0; i < students.length; i++) {
-    //                    var student = students[i];
-    //
-    //                    var opt = document.createElement('option');
-    //                    opt.text = student.last_name + ', ' + student.first_name;
-    //                    opt.value = student.id;
-    //
-    //                    $('#student_select').append(opt, null);
-    //                }
-    //            },
-    //            error: function (data) {
-    //                debugger;
-    //            }
-    //        });
-    //    });
+    $('#group_select').change(function () {
+
+        var selectedOrganization = $('#organization_select :selected').val();
+        var selectedChapter = $('#chapter_select :selected').val();
+        var selectedGroup = $('#group_select :selected').val();
+
+        $.ajax({
+            url: '<%=find_update_students_path%>',
+            type: 'GET',
+            dataType: 'json',
+            data: {
+                organization_id: selectedOrganization,
+                chapter_id: selectedChapter,
+                group_id: selectedGroup
+            },
+            success: function (data) {
+                var students = data.students;
+                debugger;
+
+                $('#student_select').empty();
+                var opt = document.createElement('option');
+                opt.text = 'All';
+
+                $('#student_select').append(opt, null);
+                for (i = 0; i < students.length; i++) {
+                    var student = students[i];
+
+                    var opt = document.createElement('option');
+                    opt.text = student.last_name + ', ' + student.first_name;
+                    opt.value = student.id;
+
+                    $('#student_select').append(opt, null);
+                }
+            },
+            error: function (data) {
+                debugger;
+            }
+        });
+    });
 
     $(function () {
 
