--- a/app/views/mindleaps_analytics/main/third.html.erb
+++ b/app/views/mindleaps_analytics/main/third.html.erb
@@ -1,2 +1,200 @@
-<h1>Main#third</h1>
-<p>Find me in app/views/mindleaps_analytics/main/third.html.erb</p>
+<head>
+  <script src="http://code.highcharts.com/highcharts.js"></script>
+</head>
+<h1>Analytics (Group)</h1>
+
+<%= form_tag do %>
+    <table>
+      <tr>
+        <td style="padding-right: 20px;">
+          <%= label_tag :organization_label, "Organization" %>
+          <%= select_tag :organization_select, options_from_collection_for_select(Organization.all, :id, :organization_name, @organization), :prompt => 'All' %>
+        </td>
+        <td style="padding-right: 20px;">
+          <%= label_tag :chapter_label, "Chapter" %>
+          <%= select_tag :chapter_select, options_from_collection_for_select(Chapter.all, :id, :chapter_name, @chapter), :prompt => 'All' %>
+        </td>
+        <td style="padding-right: 20px;">
+          <%= submit_tag "Submit" %>
+        </td>
+      </tr>
+    </table>
+<% end %>
+
+<table id="trellis" style="width: 100%; table-layout: fixed;">
+  <% rows = (@count + 1)/2 %>
+  <% rows.times do %>
+      <tr>
+        <td></td>
+        <td></td>
+      </tr>
+  <% end %>
+</table>
+
+<script>
+
+    $('#organization_select').change(function () {
+
+        var selectedOrganization = $('#organization_select :selected').val();
+        var selectedChapter = $('#chapter_select :selected').val();
+        var selectedGroup = $('#group_select :selected').val();
+        console.debug(selectedOrganization);
+
+        $.ajax({
+            url: '<%=find_update_chapters_path%>',
+            type: 'GET',
+            dataType: 'json',
+            data: {
+                organization_id: selectedOrganization,
+                chapter_id: selectedChapter,
+                group_id: selectedGroup
+            },
+            success: function (data) {
+                var chapters = data.chapters;
+                debugger;
+
+                $('#chapter_select').empty();
+                var opt = document.createElement('option');
+                opt.text = 'All';
+                $('#chapter_select').append(opt, null);
+
+                for (i = 0; i < chapters.length; i++) {
+                    var chapter = chapters[i];
+
+                    var opt = document.createElement('option');
+                    opt.text = chapter.chapter_name;
+                    opt.value = chapter.id;
+
+                    $('#chapter_select').append(opt, null);
+                }
+                $('#chapter_select').select(0);
+                $('#chapter_select').change();
+            },
+            error: function (data) {
+                debugger;
+            }
+        });
+    });
+    $('#chapter_select').change(function () {
+
+        var selectedOrganization = $('#organization_select :selected').val();
+        var selectedChapter = $('#chapter_select :selected').val();
+        var selectedGroup = $('#group_select :selected').val();
+
+        $.ajax({
+            url: '<%=find_update_groups_path%>',
+            type: 'GET',
+            dataType: 'json',
+            data: {
+                organization_id: selectedOrganization,
+                chapter_id: selectedChapter,
+                group_id: selectedGroup
+            },
+            success: function (data) {
+                var groups = data.groups;
+                debugger;
+
+                $('#group_select').empty();
+                var opt = document.createElement('option');
+                opt.text = 'All';
+
+                $('#group_select').append(opt, null);
+                for (i = 0; i < groups.length; i++) {
+                    var group = groups[i];
+
+                    var opt = document.createElement('option');
+                    opt.text = group.group_name;
+                    opt.value = group.id;
+
+                    $('#group_select').append(opt, null);
+                }
+                $('#group_select').select(0);
+                $('#group_select').change();
+            },
+            error: function (data) {
+                debugger;
+            }
+        });
+    });
+
+    $('#group_select').change(function () {
+
+        var selectedOrganization = $('#organization_select :selected').val();
+        var selectedChapter = $('#chapter_select :selected').val();
+        var selectedGroup = $('#group_select :selected').val();
+
+        $.ajax({
+            url: '<%=find_update_students_path%>',
+            type: 'GET',
+            dataType: 'json',
+            data: {
+                organization_id: selectedOrganization,
+                chapter_id: selectedChapter,
+                group_id: selectedGroup
+            },
+            success: function (data) {
+                var students = data.students;
+                debugger;
+
+                $('#student_select').empty();
+                var opt = document.createElement('option');
+                opt.text = 'All';
+
+                $('#student_select').append(opt, null);
+                for (i = 0; i < students.length; i++) {
+                    var student = students[i];
+
+                    var opt = document.createElement('option');
+                    opt.text = student.last_name + ', ' + student.first_name;
+                    opt.value = student.id;
+
+                    $('#student_select').append(opt, null);
+                }
+            },
+            error: function (data) {
+                debugger;
+            }
+        });
+    });
+
+    $(function () {
+        var charts = [],
+            $containers = $('#trellis td'),
+            datasets = <%= @series8.html_safe %>;
+
+        $.each(datasets, function (i, dataset) {
+            charts.push(new Highcharts.Chart({
+
+                chart: {
+                    renderTo: $containers[i],
+                    type: 'scatter'
+                },
+                title: {
+                    text: dataset.name
+                },
+                credits: {
+                    enabled: false
+                },
+                tooltip: {
+                    valueDecimals: 1
+                },
+                xAxis: {
+                    title: {
+                        text: '<%= t(:nr_of_lessons) %>'
+                    }
+                },
+                yAxis: {
+                    allowDecimals: false,
+                    title: {
+                        text: '<%= t(:performance)%>'
+                    }
+                },
+                legend: {
+                    enabled: false
+                },
+                series: [dataset]
+
+            }));
+        });
+    });
+</script>
