--- a/app/views/mindleaps_analytics/main/first.html.erb
+++ b/app/views/mindleaps_analytics/main/first.html.erb
@@ -9,19 +9,19 @@
       <tr>
         <td style="padding-right: 20px;">
           <%= label_tag :organization_label, "Organization" %>
-          <%= select_tag :organization_select, options_from_collection_for_select(Organization.all, :id, :organization_name, @organization), :prompt => 'All' %>
+          <%= select_tag :organization_select, options_from_collection_for_select(@organizations, :id, :organization_name, @organization), :prompt => 'All' %>
         </td>
         <td style="padding-right: 20px;">
           <%= label_tag :chapter_label, "Chapter" %>
-          <%= select_tag :chapter_select, options_from_collection_for_select(Chapter.all, :id, :chapter_name, @chapter), :prompt => 'All' %>
+          <%= select_tag :chapter_select, options_from_collection_for_select(@chapters, :id, :chapter_name, @chapter), :prompt => 'All' %>
         </td>
         <td style="padding-right: 20px;">
           <%= label_tag :group_label, "Group" %>
-          <%= select_tag :group_select, options_from_collection_for_select(Group.all, :id, :group_name, @group), :prompt => 'All' %>
+          <%= select_tag :group_select, options_from_collection_for_select(@groups, :id, :group_name, @group), :prompt => 'All' %>
         </td>
         <td style="padding-right: 20px;">
           <%= label_tag :student_label, "Student" %>
-          <%= select_tag :student_select, options_from_collection_for_select(Student.order(:last_name, :first_name).all, :id, :proper_name, @student), :prompt => 'All' %>
+          <%= select_tag :student_select, options_from_collection_for_select(@students, :id, :proper_name, @student), :prompt => 'All' %>
         </td>
         <td style="padding-right: 20px;">
           <%= submit_tag "Submit" %>
