main/second (analytics Trellis by Subject): changed chart type from Scatter to Line

--- a/app/views/mindleaps_analytics/main/second.html.erb
+++ b/app/views/mindleaps_analytics/main/second.html.erb
@@ -200,7 +200,7 @@
 
                 chart: {
                     renderTo: $containers[i],
-                    type: 'scatter'
+                    type: 'line'
                 },
                 legend: {
                     enabled: true
