Implemented: Regression parameters scaffolding and use in formula (2)

--- a/app/views/mindleaps_analytics/main/first.html.erb
+++ b/app/views/mindleaps_analytics/main/first.html.erb
@@ -2,7 +2,7 @@
   <script src="http://code.highcharts.com/highcharts.js"></script>
 </head>
 <h1>Analytics</h1>
-<%#= @lessons.to_a %>
+<%#= @intercept %>
 
 <%= form_tag do %>
     <table>
