--- a/app/views/mindleaps_analytics/main/second.html.erb
+++ b/app/views/mindleaps_analytics/main/second.html.erb
@@ -195,7 +195,7 @@
             datasets = <%= @series3.html_safe %>;
 
         $.each(datasets, function (i, dataset) {
-            console.log(dataset);
+//            console.log(dataset);
             charts.push(new Highcharts.Chart({
 
                 chart: {
