Implemented: Fitted curves on main/second

--- a/app/views/mindleaps_analytics/main/second.html.erb
+++ b/app/views/mindleaps_analytics/main/second.html.erb
@@ -2,7 +2,7 @@
   <script src="http://code.highcharts.com/highcharts.js"></script>
 </head>
 <h1>Analytics (Subject)</h1>
-<%= @nr_of_lessons %>
+<%#= @age %>
 
 <%= form_tag do %>
     <table>
