Implemented: Regression curves for Group data (page 1 chart 5 and page 3)

--- a/app/views/mindleaps_analytics/main/third.html.erb
+++ b/app/views/mindleaps_analytics/main/third.html.erb
@@ -167,7 +167,7 @@
 
                 chart: {
                     renderTo: $containers[i],
-                    type: 'scatter'
+                    type: 'line'
                 },
                 title: {
                     text: dataset.name
@@ -192,7 +192,7 @@
                 legend: {
                     enabled: false
                 },
-                series: [dataset]
+                series: dataset.series
 
             }));
         });
