--- a/app/views/mindleaps_analytics/main/third.html.erb
+++ b/app/views/mindleaps_analytics/main/third.html.erb
@@ -167,10 +167,10 @@
 
                 chart: {
                     renderTo: $containers[i],
-                    type: 'line'
+                    type: 'scatter'
                 },
                 title: {
-                    text: dataset.name
+                    text: dataset.group
                 },
                 credits: {
                     enabled: false
