Changed: Reduced marker radius from 4 (default) to 2

--- a/app/views/mindleaps_analytics/main/third.html.erb
+++ b/app/views/mindleaps_analytics/main/third.html.erb
@@ -192,6 +192,13 @@
                 legend: {
                     enabled: false
                 },
+                plotOptions: {
+                    series: {
+                        marker: {
+                            radius: 2
+                        }
+                    }
+                },
                 series: dataset.series
 
             }));
