Switched off debugging stuff in the front-end

--- a/app/views/mindleaps_analytics/main/first.html.erb
+++ b/app/views/mindleaps_analytics/main/first.html.erb
@@ -2,7 +2,7 @@
   <script src="http://code.highcharts.com/highcharts.js"></script>
 </head>
 <h1>Analytics</h1>
-<%= @series9 %>
+<%#= @series9 %>
 
 <%= form_tag do %>
     <table>
