--- a/app/views/mindleaps_analytics/main/first.html.erb
+++ b/app/views/mindleaps_analytics/main/first.html.erb
@@ -2,7 +2,7 @@
   <script src="http://code.highcharts.com/highcharts.js"></script>
 </head>
 <h1>Analytics</h1>
-<%#= @series9 %>
+<%#= @orgname + ' ' + @chapname %>
 
 <%= form_tag do %>
     <table>
@@ -49,7 +49,7 @@
   </tr>
   <tr>
     <td style="width: 50%;">
-      <div id="chart8" style="width:100%; height:400px;"></div>
+      <div id="chart10" style="width:100%; height:400px;"></div>
     </td>
     <td style="width: 50%;">
       <div id="chart9" style="width:100%; height:400px;"></div>
@@ -298,7 +298,7 @@
             series: <%= @series6.html_safe %>
         });
 
-        var Chart8 = Highcharts.chart('chart8', {
+        var Chart10 = Highcharts.chart('chart10', {
             chart: {
                 type: 'scatter'
             },
@@ -356,7 +356,7 @@
                 useHTML: true
             },
             title: {
-                text: '<%= t(:title_chart_9)%>'
+                text: '<%= t(:title_chart_9) + ' ' + @groupname%>'
             },
             xAxis: {
                 title: {
