--- a/app/views/mindleaps_analytics/main/second.html.erb
+++ b/app/views/mindleaps_analytics/main/second.html.erb
@@ -2,26 +2,26 @@
   <script src="https://code.highcharts.com/highcharts.js"></script>
 </head>
 <h1>Analytics (Subject)</h1>
-<%#= @student.class %>
+<%#= @selected_student_id.class %>
 
 <%= form_tag do %>
     <table>
       <tr>
         <td style="padding-right: 20px;">
           <%= label_tag :organization_label, "Organization" %>
-          <%= select_tag :organization_select, options_from_collection_for_select(@organizations, :id, :organization_name, @organization) %>
+          <%= select_tag :organization_select, options_from_collection_for_select(@organizations, :id, :organization_name, @selected_organization_id) %>
         </td>
         <td style="padding-right: 20px;">
           <%= label_tag :chapter_label, "Chapter" %>
-          <%= select_tag :chapter_select, options_from_collection_for_select(@chapters, :id, :chapter_name, @chapter), :prompt => 'All' %>
+          <%= select_tag :chapter_select, options_from_collection_for_select(@chapters, :id, :chapter_name, @selected_chapter_id), :prompt => 'All' %>
         </td>
         <td style="padding-right: 20px;">
           <%= label_tag :group_label, "Group" %>
-          <%= select_tag :group_select, options_from_collection_for_select(@groups, :id, :group_name, @group), :prompt => 'All' %>
+          <%= select_tag :group_select, options_from_collection_for_select(@groups, :id, :group_name, @selected_group_id), :prompt => 'All' %>
         </td>
         <td style="padding-right: 20px;">
           <%= label_tag :student_label, "Student" %>
-          <%= select_tag :student_select, options_from_collection_for_select(@students, :id, :proper_name, @student), :prompt => 'All' %>
+          <%= select_tag :student_select, options_from_collection_for_select(@students, :id, :proper_name, @selected_student_id), :prompt => 'All' %>
         </td>
         <td style="padding-right: 20px;">
           <%= label_tag :subject_label, "Subject" %>
