Material design and navigation between screens

--- a/app/views/mindleaps_analytics/main/third.html.erb
+++ b/app/views/mindleaps_analytics/main/third.html.erb
@@ -1,7 +1,12 @@
 <head>
   <script src="https://code.highcharts.com/highcharts.js"></script>
 </head>
-<h1>Analytics (Group)</h1>
+
+<%- content_for :header_content do %>
+  <%= render partial: '/shared/header_content', locals: { title: 'Group Analytics' } %>
+<%- end %>
+
+<%= render 'mindleaps_analytics/shared/tabs' %>
 
 <%= form_tag do %>
     <table>
