--- a/app/views/mindleaps_analytics/main/second.html.erb
+++ b/app/views/mindleaps_analytics/main/second.html.erb
@@ -1,8 +1,12 @@
 <head>
   <script src="https://code.highcharts.com/highcharts.js"></script>
 </head>
-<h1>Analytics (Subject)</h1>
-<%#= @selected_student_id.class %>
+
+<%- content_for :header_content do %>
+  <%= render partial: '/shared/header_content', locals: { title: 'Subject Analytics' } %>
+<%- end %>
+
+<%= render 'mindleaps_analytics/shared/tabs' %>
 
 <%= form_tag do %>
     <table>
